// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CiteModalAction renders with all props 1`] = `
<Fragment>
  <UserActionWrapper>
    <EventTracker
      eventAction="Open modal"
      eventId="Cite"
      eventPropName="onClick"
      extractEventArgsToForward={null}
    >
      <Button
        onClick={[Function]}
      >
        <IconText
          icon={<ExportOutlined />}
          text="cite"
        />
      </Button>
    </EventTracker>
  </UserActionWrapper>
  <Modal
    footer={null}
    onCancel={[Function]}
    open={false}
    title="Cite Article"
  >
    <LoadingOrChildren
      loading={false}
    >
      <div>
        <Row>
          <pre />
        </Row>
        <Row
          justify="space-between"
          type="flex"
        >
          <div>
            <EventTracker
              eventAction="Copy to clipboard"
              eventId="Copy citation"
              eventPropName="onChange"
              extractEventArgsToForward={[Function]}
            >
              <CopyToClipboard
                onCopy={[Function]}
              >
                <Button
                  style={
                    Object {
                      "marginRight": 12,
                    }
                  }
                >
                  <CopyOutlined />
                   Copy to Clipboard
                </Button>
              </CopyToClipboard>
            </EventTracker>
            <EventTracker
              eventAction="Download"
              eventId="Download citation"
              eventPropName="onChange"
              extractEventArgsToForward={[Function]}
            >
              <Button
                onClick={[Function]}
              >
                <DownloadOutlined />
                 Download
              </Button>
            </EventTracker>
          </div>
          <EventTracker
            eventAction="Select"
            eventId="Cite format selection"
            eventPropName="onChange"
            extractEventArgsToForward={[Function]}
          >
            <SelectBox
              defaultValue="application/x-bibtex"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "display": "BibTeX",
                    "value": "application/x-bibtex",
                  },
                  Object {
                    "display": "LaTeX (EU)",
                    "value": "application/vnd+inspire.latex.eu+x-latex",
                  },
                  Object {
                    "display": "LaTeX (US)",
                    "value": "application/vnd+inspire.latex.us+x-latex",
                  },
                  Object {
                    "display": "CV (html)",
                    "value": "text/vnd+inspire.html+html",
                  },
                ]
              }
              style={
                Object {
                  "width": 140,
                }
              }
            />
          </EventTracker>
        </Row>
      </div>
    </LoadingOrChildren>
  </Modal>
</Fragment>
`;

exports[`CiteModalAction renders with loading 1`] = `
<Fragment>
  <UserActionWrapper>
    <EventTracker
      eventAction="Open modal"
      eventId="Cite"
      eventPropName="onClick"
      extractEventArgsToForward={null}
    >
      <Button
        onClick={[Function]}
      >
        <IconText
          icon={<ExportOutlined />}
          text="cite"
        />
      </Button>
    </EventTracker>
  </UserActionWrapper>
  <Modal
    footer={null}
    onCancel={[Function]}
    open={false}
    title="Cite Article"
  >
    <LoadingOrChildren
      loading={true}
    >
      <div>
        <Row>
          <pre />
        </Row>
        <Row
          justify="space-between"
          type="flex"
        >
          <div>
            <EventTracker
              eventAction="Copy to clipboard"
              eventId="Copy citation"
              eventPropName="onChange"
              extractEventArgsToForward={[Function]}
            >
              <CopyToClipboard
                onCopy={[Function]}
              >
                <Button
                  style={
                    Object {
                      "marginRight": 12,
                    }
                  }
                >
                  <CopyOutlined />
                   Copy to Clipboard
                </Button>
              </CopyToClipboard>
            </EventTracker>
            <EventTracker
              eventAction="Download"
              eventId="Download citation"
              eventPropName="onChange"
              extractEventArgsToForward={[Function]}
            >
              <Button
                onClick={[Function]}
              >
                <DownloadOutlined />
                 Download
              </Button>
            </EventTracker>
          </div>
          <EventTracker
            eventAction="Select"
            eventId="Cite format selection"
            eventPropName="onChange"
            extractEventArgsToForward={[Function]}
          >
            <SelectBox
              defaultValue="application/x-bibtex"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "display": "BibTeX",
                    "value": "application/x-bibtex",
                  },
                  Object {
                    "display": "LaTeX (EU)",
                    "value": "application/vnd+inspire.latex.eu+x-latex",
                  },
                  Object {
                    "display": "LaTeX (US)",
                    "value": "application/vnd+inspire.latex.us+x-latex",
                  },
                  Object {
                    "display": "CV (html)",
                    "value": "text/vnd+inspire.html+html",
                  },
                ]
              }
              style={
                Object {
                  "width": 140,
                }
              }
            />
          </EventTracker>
        </Row>
      </div>
    </LoadingOrChildren>
  </Modal>
</Fragment>
`;

exports[`CiteModalAction shows an alert with the error message when there is an error in setCiteContentFor 1`] = `
<Fragment>
  <UserActionWrapper>
    <EventTracker
      eventAction="Open modal"
      eventId="Cite"
      eventPropName="onClick"
      extractEventArgsToForward={null}
    >
      <Button
        onClick={[Function]}
      >
        <IconText
          icon={<ExportOutlined />}
          text="cite"
        />
      </Button>
    </EventTracker>
  </UserActionWrapper>
  <Modal
    footer={null}
    onCancel={[Function]}
    open={false}
    title="Cite Article"
  >
    <LoadingOrChildren
      loading={false}
    >
      <div>
        <div
          className="mb3"
        >
          <Alert
            description="There is an error"
            showIcon={true}
            type="error"
          />
        </div>
        <Row>
          <pre />
        </Row>
        <Row
          justify="space-between"
          type="flex"
        >
          <div>
            <EventTracker
              eventAction="Copy to clipboard"
              eventId="Copy citation"
              eventPropName="onChange"
              extractEventArgsToForward={[Function]}
            >
              <CopyToClipboard
                onCopy={[Function]}
              >
                <Button
                  style={
                    Object {
                      "marginRight": 12,
                    }
                  }
                >
                  <CopyOutlined />
                   Copy to Clipboard
                </Button>
              </CopyToClipboard>
            </EventTracker>
            <EventTracker
              eventAction="Download"
              eventId="Download citation"
              eventPropName="onChange"
              extractEventArgsToForward={[Function]}
            >
              <Button
                onClick={[Function]}
              >
                <DownloadOutlined />
                 Download
              </Button>
            </EventTracker>
          </div>
          <EventTracker
            eventAction="Select"
            eventId="Cite format selection"
            eventPropName="onChange"
            extractEventArgsToForward={[Function]}
          >
            <SelectBox
              defaultValue="application/x-bibtex"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "display": "BibTeX",
                    "value": "application/x-bibtex",
                  },
                  Object {
                    "display": "LaTeX (EU)",
                    "value": "application/vnd+inspire.latex.eu+x-latex",
                  },
                  Object {
                    "display": "LaTeX (US)",
                    "value": "application/vnd+inspire.latex.us+x-latex",
                  },
                  Object {
                    "display": "CV (html)",
                    "value": "text/vnd+inspire.html+html",
                  },
                ]
              }
              style={
                Object {
                  "width": 140,
                }
              }
            />
          </EventTracker>
        </Row>
      </div>
    </LoadingOrChildren>
  </Modal>
</Fragment>
`;
